Correct z-index and pattern url

--- a/src/app/content/article/article.component.sass
+++ b/src/app/content/article/article.component.sass
@@ -11,14 +11,14 @@
     right: 0
     height: 1000px
     width: 856px
-    background: url("/assets/img/pattern_1.png") right bottom no-repeat
+    background: url("/assets/img/pattern-1.png") right bottom no-repeat
     opacity: .05
-    z-index: 5
+    z-index: 10
 
   .aae-article-wrapper
     background-color: $grey-100
-    margin: $wrapper-margin auto
+    margin: $wrapper-margin-small auto
     padding: $wrapper-padding
     width: $wrapper-width-narrow
     position: relative
-    z-index: 10
+    z-index: 20
